--- a/package.json
+++ b/package.json
@@ -8,24 +8,23 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-icons": "node scripts/generate-icons.js"
+    "test": "vitest",
+    "lighthouse": "lighthouse http://localhost:5173 --output-path=./lighthouse-report.html --view"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
+    "next-themes": "^0.2.1",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
-    "vaul": "^0.9.0",
-    "vite-plugin-image-optimizer": "^1.1.7"
+    "terser": "^5.28.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -40,11 +39,13 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "jimp": "^0.22.10",
+    "lighthouse": "^11.6.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-image-optimizer": "^1.1.7",
+    "vitest": "^1.3.1"
   }
 }
